# HIPAA-Health-App-Check

./: .gitignore  .pylintrc  CITATION.cff  README.md  SECURITY.md  main.py  pyproject.toml
.github/: dependabot.yml
.github/workflows/: codeql.yml  compliance-check.yaml  scorecard.yml
